feat: jpa #6 um pra muitos

--- a/JPA/JPA project/src/persistence.fxml
+++ b/JPA/JPA project/src/persistence.fxml
@@ -9,6 +9,8 @@
         <class>modelo.basico.Produto</class>
         <class>modelo.umpraum.Assento</class>
         <class>modelo.umpraum.Cliente</class>
+        <class>modelo.umpramuitos.Pedidos</class>
+        <class>modelo.umpramuitos.ItemPedido</class>
         <mapping-file>META-INF/consultas.xml</mapping-file>
 
         <properties>
